--- a/Frontend/dns1/package.json
+++ b/Frontend/dns1/package.json
@@ -19,9 +19,9 @@
     "typeface-quattrocento": "^1.1.13"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "20.10.5",
     "@types/papaparse": "^5.3.14",
-    "@types/react": "^18",
+    "@types/react": "18.2.45",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
